# Embedded-Systems-Team-Synergy

robot/: CMakeLists.txt  main.c  motor.c  sensor.c  sound.c  test.c
